--- a/cinema/app/src/main/res/layout/fragment_estrenos.xml
+++ b/cinema/app/src/main/res/layout/fragment_estrenos.xml
@@ -67,7 +67,8 @@
         android:paddingTop="20dp"
         >
 
-    <LinearLayout
+    <ListView
+        android:id="@+id/estrenosList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="20dp"
@@ -78,259 +79,12 @@
         app:layout_constraintStart_toStartOf="parent"
         android:background="@drawable/bordegris"
         >
-        <!-- Primer elemento-->
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="1 de abril"
-            android:textSize="25sp"
-            android:textFontWeight="600"
-            android:textColor="@color/white"
-            android:padding="10dp"
-            />
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="210dp"
-            android:src="@drawable/promo2x1"
-            android:scaleType="fitXY"
-            />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:orientation="horizontal"
-            android:layout_marginTop="10dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="1dp"
-            >
 
-            <TextView
-                android:layout_width="210dp"
-                android:layout_height="20dp"
-                android:text="En Guerra Con Mi Abuelo"
-                android:textSize="18dp"
-                android:textFontWeight="6000"
-                android:textColor="@color/white"
-                />
 
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:src="@drawable/notificacion_36x36"
-                android:layout_marginLeft="25dp"
-                />
 
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:src="@drawable/por_ver_off_36x36"
-                android:layout_marginLeft="5dp"
-                />
-
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginLeft="5dp"
-                android:src="@drawable/info_36x36" />
-
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:src="@drawable/compartir_36x36"
-                android:layout_marginLeft="5dp"
-                />
-
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:text="War With Grandpa (2020)"
-            android:paddingLeft="10dp"
-            android:textColor="@color/white"
-            android:textFontWeight="300"
-            />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:orientation="horizontal"
-            android:paddingStart="10dp"
-            >
-
-            <Button
-                android:layout_width="40dp"
-                android:layout_height="35dp"
-                android:textFontWeight="800"
-                android:textSize="10sp"
-                android:text="S/C"
-                />
-            <Button
-                android:layout_width="60dp"
-                android:layout_height="35dp"
-                android:textFontWeight="800"
-                android:textSize="10sp"
-                android:text="94 min"
-                android:textAllCaps="false"
-                />
-            <Button
-                android:layout_width="70dp"
-                android:layout_height="35dp"
-                android:textFontWeight="800"
-                android:textSize="10sp"
-                android:text="Comedia"
-                android:textAllCaps="false"/>
-
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:text="Sinopsis"
-            android:paddingStart="10dp"
-            android:textSize="20dp"
-            android:textFontWeight="600"
-            android:textColor="@color/white"
-            android:layout_marginBottom="10dp"
-            />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:text="Peter un niño que tiene una vida normal junto con su familia, se entera que su abuelo vivirla con ellos y se quedarla con su habitación, molesto, decide declarar la guerra en un intento por recuperarla"
-            android:paddingStart="10dp"
-            android:textColor="@color/white"
-            />
-
-        <!-- Primer elemento-->
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="1 de abril"
-            android:textSize="25sp"
-            android:textFontWeight="600"
-            android:textColor="@color/white"
-            android:padding="10dp"
-            />
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="210dp"
-            android:src="@drawable/promo2x1"
-            android:scaleType="fitXY"
-            />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:orientation="horizontal"
-            android:layout_marginTop="10dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="1dp"
-            >
-
-            <TextView
-                android:layout_width="210dp"
-                android:layout_height="20dp"
-                android:text="En Guerra Con Mi Abuelo"
-                android:textSize="18dp"
-                android:textFontWeight="6000"
-                android:textColor="@color/white"
-                />
-
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:src="@drawable/notificacion_36x36"
-                android:layout_marginLeft="25dp"
-                />
-
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:src="@drawable/por_ver_off_36x36"
-                android:layout_marginLeft="5dp"
-                />
-
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginLeft="5dp"
-                android:src="@drawable/info_36x36" />
-
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:src="@drawable/compartir_36x36"
-                android:layout_marginLeft="5dp"
-                />
-
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:text="War With Grandpa (2020)"
-            android:paddingLeft="10dp"
-            android:textColor="@color/white"
-            android:textFontWeight="300"
-            />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:orientation="horizontal"
-            android:paddingStart="10dp"
-            >
-
-            <Button
-                android:layout_width="40dp"
-                android:layout_height="35dp"
-                android:textFontWeight="800"
-                android:textSize="10sp"
-                android:text="S/C"
-                />
-            <Button
-                android:layout_width="60dp"
-                android:layout_height="35dp"
-                android:textFontWeight="800"
-                android:textSize="10sp"
-                android:text="94 min"
-                android:textAllCaps="false"
-                />
-            <Button
-                android:layout_width="70dp"
-                android:layout_height="35dp"
-                android:textFontWeight="800"
-                android:textSize="10sp"
-                android:text="Comedia"
-                android:textAllCaps="false"/>
-
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:text="Sinopsis"
-            android:paddingStart="10dp"
-            android:textSize="20dp"
-            android:textFontWeight="600"
-            android:textColor="@color/white"
-            android:layout_marginBottom="10dp"
-            />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:text="Peter un niño que tiene una vida normal junto con su familia, se entera que su abuelo vivirla con ellos y se quedarla con su habitación, molesto, decide declarar la guerra en un intento por recuperarla"
-            android:paddingStart="10dp"
-            android:textColor="@color/white"
-            />
-
-    </LinearLayout>
+    </ListView>
 
 
 
