--- a/cinema/app/src/main/res/layout/activity_rating_pelicula.xml
+++ b/cinema/app/src/main/res/layout/activity_rating_pelicula.xml
@@ -33,12 +33,38 @@
         android:columnWidth="100dp"
         android:horizontalSpacing="10dp"
         android:verticalSpacing="10dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:id="@+id/layout"
+        android:background="@drawable/contorno"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/person_24dp"/>
+
+        <EditText
+            android:id="@+id/edit"
+            android:layout_width="310dp"
+            android:layout_height="45dp"
+            android:padding="14dp"
+            android:layout_marginLeft="15dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:hint="Escribe un comentario"
+            android:textSize="15sp"
+            android:background="@drawable/boton"/>
+
+
+    </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
-
         <ListView
             android:id="@+id/lista"
             android:layout_width="match_parent"
@@ -46,5 +72,6 @@
             android:layout_marginTop="5dp"
             android:dividerHeight="15dp"/>
     </ScrollView>
+
 
 </LinearLayout>
