--- a/cinema/app/src/main/res/layout/activity_main.xml
+++ b/cinema/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/bottom_nav_menu" />
+        app:menu="@menu/bottom_nav_menu"
+        app:itemTextColor="@drawable/icon_tint_selector"
+        app:itemIconTint="@drawable/icon_tint_selector"/>
 
     <fragment
         android:id="@+id/nav_host_fragment_activity_main"
