--- a/cinema/app/src/main/res/values-night/themes.xml
+++ b/cinema/app/src/main/res/values-night/themes.xml
@@ -10,8 +10,11 @@
         <item name="colorSecondaryVariant">@color/teal_200</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">@color/almostwhite</item>
+        <item name="android:statusBarColor">@color/almostblack</item>
         <!-- Customize your theme here. -->
         <item name="android:colorBackground">@color/almostblack</item>
+        <item name="android:windowLightStatusBar">false</item>
+        <item name="android:navigationBarColor">@color/black</item>
+        <item name="android:navigationIcon">@color/almostwhite</item>
     </style>
 </resources>
