--- a/cinema/app/src/main/res/values/splash_theme.xml
+++ b/cinema/app/src/main/res/values/splash_theme.xml
@@ -9,7 +9,8 @@
 
         <!-- Status bar and Nav bar configs -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
-        <item name="android:navigationBarColor">@color/black</item>
+        <item name="android:navigationBarColor">@color/almostblack</item>
+        <item name="android:navigationIcon">@color/almostwhite</item>
         <item name="android:windowLightStatusBar">false</item>
     </style>
 </resources>
